# crispy-crypto-market-maker

./: .env.example  .env.prod.example  .gitignore  .prettierignore  .rustfmt.toml  README.md  SECURITY.md  clippy.toml  docker-compose.yml  eslint.config.js  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.githooks/: pre-commit
.github/: copilot-instructions.md  git-commit-instructions.md
.github/skills/: db.md  nextjs-base.md  rust-backend.md  rust-base.md  rust-cli.md  testing.md
apps/bot/: Cargo.toml  Dockerfile
apps/bot/src/: db.rs  exchange.rs  init.rs  main.rs  models.rs  router_api.rs  router_ws.rs  state.rs  utils.rs
apps/bot/src/exchange/: exchange.rs  mod.rs  place_exchange_orders.rs
apps/bot/src/router/: api_app.rs  api_geo.rs  api_health.rs  api_kill_switch.rs  api_manual_hedge.rs  api_pause_pair.rs  api_reset_state.rs  api_set_strategy.rs  api_update_config.rs  app.rs  mod.rs  pause_pair.rs  reset_state.rs  update_config.rs  ws_app.rs
apps/bot/src/router/api_manual_hedge/: api_manual_hedge.rs  mod.rs  update_pair_after_hedge.rs
apps/bot/src/router/manual_hedge/: manual_hedge.rs  mod.rs  update_pair_after_hedge.rs
apps/bot/src/state/: app_state.rs  engine_payload.rs  engine_process_exchange.rs  engine_reset.rs  engine_simulate_exchange_health.rs  engine_state.rs  engine_update_quotes.rs  mod.rs  pair_state.rs  payload.rs  strategy.rs
apps/engine/: Cargo.toml  Dockerfile
apps/exchange/: Cargo.toml  Dockerfile
apps/exchange/src/: main.rs  models.rs  state.rs  utils.rs
apps/web/: .env.prod.example  next.config.ts  package.json  tsconfig.json  vercel.json  vitest.config.ts
infra/postgres/: Dockerfile
scripts/: _lib.sh  check-file-lines.sh  free-dev-ports.sh  install-git-hooks.js  run-bot.sh  run-exchange.sh  run-services.sh  setup-ubuntu.sh  stop-bot.sh  stop-exchange.sh
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: GlobalHeader.tsx  (+20 more)
(+199 files in other folders)
