[package]
name = "crispy-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros", "json"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.13.2", features = ["json"] }
futures-util = "0.3.32"
rust_decimal = { version = "1.40.0", features = ["serde-with-str"] }
rust_decimal_macros = "1.40.0"
crispy-shared = { path = "../../packages/rust-shared" }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
dotenvy = "0.15.7"
